--- a/build.gradle
+++ b/build.gradle
@@ -313,7 +313,7 @@ dependencies {
         implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
         implementation "org.springframework.boot:spring-boot-starter-oauth2-client:$springBootVersion"
 
-        implementation "org.springframework.session:spring-session-core:$springBootVersion"
+        implementation "org.springframework.session:spring-session-core:3.4.1"
         implementation "org.springframework:spring-jdbc:6.2.1"
 
         implementation 'com.unboundid.product.scim2:scim2-sdk-client:2.3.5'
